[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-ollama>=1.1.0",
    "pymilvus[model]>=2.6.11",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
    "transformers>=5.5.0",
]
